<resources>
    <string name="app_name">Test Project</string>
    <string name="login">Log in</string>
    <string name="login_title">Is Test Project</string>
    <string name="view_item_title">Welcome</string>
    <string name="detail_title">Details of listed items:</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="view_item_detail">View Item Details</string>
</resources>