<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".ui.login.LoginFragment"
    >
<data>
    <variable name="viewmodel"
        type="com.testproject.ui.login.LoginViewModel"
        />
</data>

<androidx.core.widget.NestedScrollView
    android:id="@+id/nested"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/include"
            layout="@layout/top_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize7x"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/include"
            app:layout_constraintEnd_toEndOf="@+id/include"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toTopOf="@+id/include"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/tvLogin"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="@dimen/textSize6x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />


        <EditText
            android:id="@+id/txtUserName"
            style="@style/editTextWhiteStyle"
            android:layout_width="0dp"
            android:hint="@string/username"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:afterTextChanged="@{viewmodel::onTextChangedUserNameField}"
            android:inputType="textEmailAddress"
            android:text="@={viewmodel.liveDataUserName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

        <EditText
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            android:layout_marginTop="30dp"
            style="@style/editTextWhiteStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:afterTextChanged="@{viewmodel::onTextChangedPasswordField}"
            android:inputType="textPassword"
            android:text="@={viewmodel.liveDataPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize2x"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="@+id/txtPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />


        <Button
            android:id="@+id/btnLogin"
            android:enabled="@{viewmodel.liveDataButtonEnable}"
            style="@style/btnStyleWhite"
            android:onClick="@{viewmodel.onButtonClick}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
</layout>
